minor fixes: - wording/phrasing - added snackbars when login fails to make failing more visible to the user - made styling of error messages when setting user names more like in the other forms already implemented on the page

--- a/src/app/user/user.scss
+++ b/src/app/user/user.scss
@@ -19,7 +19,6 @@
   color: light-dark(rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.86));
 }
 
-.error-text {
-  margin: 0;
-  color: #b71c1c;
+.save-button {
+  margin-top: var(--space-16);
 }
